tests/baselines/reference/objectTypeWithCallSignatureHidingMembersOfFunctionAssignmentCompat.errors.txt
==== tests/cases/compiler/objectTypeWithCallSignatureHidingMembersOfFunctionAssignmentCompat.ts (2 errors) ====
    interface I {
        (): void;
    }
    
    var i: I;
    var f: Object;
    f = i;
    i = f;
    ~
!!! objectTypeWithCallSignatureHidingMembersOfFunctionAssignmentCompat.ts(8,1): error TS2012: Type 'Object' is not assignable to type 'I':
!!! 	Type 'I' requires a call signature, but type 'Object' lacks one.
    
    var a: {
        (): void
    }
    f = a;
    a = f;
    ~
!!! objectTypeWithCallSignatureHidingMembersOfFunctionAssignmentCompat.ts(14,1): error TS2012: Type 'Object' is not assignable to type '() => void':
!!! 	Type '() => void' requires a call signature, but type 'Object' lacks one.